# passman

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  local-dev-setup.sh  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sample_env  setup.cfg
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
audit/: admin.py  models.py
audit/migrations/: 0001_initial.py  0002_audit_secret.py  0003_audit_user.py  0004_auto_20200725_1451.py  0005_auto_20200812_1413.py  0006_auto_20211112_1451.py
audit/tests/: test_models.py
config/: settings.py  urls.py
core/: admin.py  backends.py  middleware.py  views.py
core/management/commands/: import_from_rattic_db.py
core/tests/: test_admin.py  test_middleware.py
localauth/: apps.py  urls.py  views.py
localauth/templates/registration/: login.html
localauth/tests/: test_localauth.py
secret/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
secret/migrations/: 0001_initial.py  0002_auto_20200712_1143.py  0003_auto_20200712_1423.py  0004_auto_20200714_1741.py  0005_auto_20200719_1042.py  0006_secretgroupobjectpermission_secretuserobjectpermission.py  0007_auto_20210118_1640.py  0008_auto_20211112_1451.py  0009_add_file_model.py
secret/templatetags/: filter_tags.py
secret/tests/: factories.py  test_filters.py  test_models.py  test_views.py
templates/: 403.html  base.html
templates/partials/: messages.html  secret-audit.html  secret-nav.html  side-nav.html  top-nav.html
templates/secret/: confirm-delete.html  file_delete.html  file_list.html  file_upload.html  mfa.html  mfa_delete.html  mfa_setup.html  permissions.html  secret_audit.html  secret_confirm_delete.html  secret_form.html  secret_list.html
templates/twofactor/: enroll.html  verify.html
templates/user/: account-disabled.html  logged-out.html
twofactor/: apps.py  forms.py  urls.py  views.py
twofactor/tests/: test_views.py
user/: admin.py  managers.py  models.py  urls.py
user/migrations/: 0001_initial.py
user/tests/: factories.py  test_models.py
user/tests/factories/: user.py
