[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .venv
  | .vscode

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "passman"
version = "1.0.0"
description = "Passman is a simple hosted password manager built to replace Rattic."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
packages = [{include = "secret"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
appdirs = "1.4.4"
asgiref = "3.7.2"
attrs = "20.3.0"
black = "24.3.0"
certifi = "2023.7.22"
cffi = "1.15.1"
cfgv = "3.2.0"
chardet = "4.0.0"
click = "8.1.3"
codecov = "2.1.13"
coverage = "5.4"
cryptography = "42.0.4"
distlib = "0.3.1"
dj-database-url = "1.2.0"
django = "4.2.14"
django-appconf = "1.0.5"
django-crispy-forms = "1.10.0"
django-cryptography = "1.1"
django-environ = "0.10.0"
django-filter = "23.1"
django-guardian = "2.4.0"
django-ipware = "3.0.7"
django-log-formatter-ecs = "0.0.5"
django-otp = "1.1.6"
django-staff-sso-client = "4.2.1"
factory-boy = "3.2.0"
faker = "20.0.0"
filelock = "3.0.12"
flake8 = "3.8.4"
flake8-blind-except = "0.2.0"
flake8-debugger = "4.0.0"
flake8-mutable = "1.2.0"
flake8-print = "4.0.0"
freezegun = "1.1.0"
gunicorn = "22.0.0"
identify = "1.5.13"
idna = "3.7"
iniconfig = "1.1.1"
isort = "5.7.0"
kubi-ecs-logger = "0.1.2"
lxml = "4.9.4"
marshmallow = "3.19.0"
mccabe = "0.6.1"
mohawk = "1.1.0"
mypy-extensions = "0.4.3"
nodeenv = "1.5.0"
oauthlib = "3.2.2"
packaging = "23.0"
pathspec = "0.9.0"
pillow = "10.3.0"
platformdirs = "2.5.2"
pluggy = "0.13.1"
pre-commit = "2.9.3"
psycopg2 = "2.9.5"
py = "1.11.0"
pycodestyle = "2.6.0"
pycparser = "2.21"
pyflakes = "2.2.0"
pyotp = "2.8.0"
pyparsing = "2.4.7"
pytest = "7.3.1"
pytest-cov = "2.11.1"
pytest-django = "4.1.0"
pytest-env = "0.6.2"
pytest-freezegun = "0.4.2"
pytest-mock = "3.5.1"
pytest-sugar = "0.9.4"
python-dateutil = "2.8.1"
pytz = "2023.2"
pyyaml = "6.0.1"
pyzbar = "0.1.9"
qrcode = "7.3.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
sentry-sdk = "1.14.0"
six = "1.16.0"
sqlparse = "0.5.0"
termcolor = "1.1.0"
text-unidecode = "1.3"
toml = "0.10.2"
tomli = "2.0.1"
urllib3 = "1.26.18"
virtualenv = "20.4.0"
whitenoise = "6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
profile="black"
line_length=100
skip="env,venv"
